Fix register/login bug

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,24 @@
   color: #61dafb;
 }
 
+h1,h2,h3 {
+  text-align: center
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 .flickContainer {
   width: 250px;
-  align-items: center;
+  height: 400px;
+  margin: 0 auto;
+  display: inline-block;
+  border: 1px solid black;
+  padding: 10px;
+  justify-content: center;
+}
+
+.flexContainer {
+  display: flex
 }
