--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,8 @@ img {
   height: 50px;
 }
 
-.register, .login, .profile, .edit {
+.register, .login, .profile, .edit, .profile {
+  text-align: center;
   width: 500px;
   margin: 0 auto;
   clear: both;
@@ -89,15 +90,8 @@ input, ::placeholder {
   border-radius: 10px;
 }
 
-.fave {
-  /* background: linear-gradient(90deg, rgba(83,58,123,1) 0%, rgba(98,60,234,1) 100%); */
-  background: #623CEA;
-  color: white;
-  height: 30px;
-  font-size: 0.8em;
-}
 
-button[type="submit"] {
+button[type="submit"], .logoutButton, .editButton {
   background-color: white;
   text-transform: uppercase;
   font-weight: bolder;
@@ -108,6 +102,14 @@ button[type="submit"] {
   box-sizing: border-box;
   border: 1px solid black;
   border-radius: 10px;
+}
+
+.fave {
+  /* background: linear-gradient(90deg, rgba(83,58,123,1) 0%, rgba(98,60,234,1) 100%); */
+  background: #623CEA;
+  color: white;
+  height: 30px;
+  font-size: 0.8em;
 }
 
 button:hover, .goTo:hover, a:hover {
