--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ body {
 h1,h2 {
   text-align: center;
   letter-spacing: 2px;
+  margin: 20px 0;
 }
 
 ol, ul, li {
@@ -46,6 +47,18 @@ a, a:hover, a:visited {
   box-shadow: 0 2px 0 black;
 }
 
+.pages, .pages:hover {
+  color: white;
+  font-size: 1em;
+  font-weight: bold;
+  margin: 0 20px;
+  background: linear-gradient(90deg, rgba(83,58,123,1) 0%, rgba(98,60,234,1) 100%);
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 1em 1.5em;
+  box-shadow: 0 2px 0 black;
+}
+
 .flexContainer {
   text-align: center;
 }
@@ -56,6 +69,15 @@ a, a:hover, a:visited {
   margin: 0 auto;
   display: inline-block;
   padding: 15px 0;
+}
+
+.flickFlexBox {
+  display: inline-flex;
+  margin: 25px 100px;
+}
+
+.flickDetails {
+  margin: 0 100px;
 }
 
 img {
@@ -91,7 +113,7 @@ input, ::placeholder {
 }
 
 
-button[type="submit"], .logoutButton, .editButton {
+button[type="submit"], .logoutButton, .editButton, .deleteButton {
   background-color: white;
   text-transform: uppercase;
   font-weight: bolder;
